# TensorPolynomials

./: .gitignore  LICENSE  README.md  setup.cfg
scripts/: anon_script.py  materials.py  mnist_outliers.py  quarks.py  signature_tensors.py  signature_tensors_lorentz.py  signature_tensors_time_series.py  sos_spectral.py
src/tensorpolynomials/: data.py  ml.py  models.py  utils.py
src/tensorpolynomials.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_data.py
