[metadata]
name = tensorpolynomials
version = 0.0.1
author = Wilson Gregory
author_email = wilson.g.gregory@gmail.com
description = Package for writing polynomials of tensor inputs and tensor outputs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WilsonGregory/TensorPolynomials
project_urls =
    Bug Tracker = https://github.com/WilsonGregory/TensorPolynomials/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9
install_requires =
    matplotlib
    numpy
    jax
    optax

[options.packages.find]
where = src